cmake_minimum_required(VERSION 3.20.0)
project(HAG)
file(GLOB GENERIC_SOURCE CONFIGURE_DEPENDS source/general/*.c)
if (WIN32)
	file(GLOB OS_SOURCE CONFIGURE_DEPENDS source/win32/*.c)
endif()
if (NOT WIN32)
	message(WARNING "no windows?")
endif()
add_library(HAG STATIC ${GENERIC_SOURCE} ${OS_SOURCE})
target_include_directories(HAG PRIVATE include)
set_target_properties(HAG PROPERTIES LINKER_LANGUAGE C)